# TowerOfBabel

./: .env.example  .gitignore  README.md  pyproject.toml
notebooks/: compose_from_r2.py  explore.py
notebooks/__marimo__/session/: explore.py.json
src/usd_pipeline/: __init__.py  acquire.py  cli.py  compose.py  compose_run.py  config.py  manifest.py  models.py  palatial.py  r2.py  storage.py  viz.py
tests/: test_acquire.py  test_cli.py  test_compose.py  test_compose_run.py  test_config.py  test_live_smoke.py  test_manifest.py  test_models.py  test_palatial.py  test_r2.py  test_smoke.py  test_storage.py  test_viz.py
