[project]
name = "usd-pipeline"
version = "0.1.0"
description = "Acquisition + assembly pipeline for USD/USDz assets from Palatial."
readme = "README.md"
authors = [
    { name = "Nejc Drobnič", email = "nejc@nejc.dev" }
]
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "boto3>=1.34",
    "typer>=0.12",
    "pydantic-settings>=2.2",
    "tenacity>=8.2",
    "rich>=13.7",
    # USD/USDz composition step
    "usd-core>=24.8",
    "trimesh>=4.4",
    "numpy>=1.26",
    "pillow>=10.3",
    "networkx>=3.2",
    "scipy>=1.11",  # trimesh uses it for fast (sparse) vertex-normal computation
]

[project.scripts]
usd-pipeline = "usd_pipeline.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
    "moto[s3]>=5.0",
    "ruff>=0.6",
]

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
markers = ["live: hits the real Palatial API (opt-in, network required)"]
addopts = "-m 'not live'"
